Assertion failure: false, at /builds/worker/workspace/build/src/dom/media/webaudio/AudioContext.cpp:926
Categories
(Core :: Web Audio, defect, P3)
Tracking
()
People
(Reporter: jkratzer, Assigned: pehrsons)
References
(Blocks 1 open bug)
Details
(Keywords: assertion, testcase)
Attachments
(3 files, 1 obsolete file)
Updated•6 years ago
|
Updated•6 years ago
|
Comment 1•4 years ago
|
||
A Pernosco session is available here: https://pernos.co/debug/iLa1wQFASowPWdfW7hDRHQ/index.html
Assignee | ||
Comment 2•4 years ago
|
||
This assertion fails because we double-close an AudioContext. No surprise there.
There is a guard in AudioContext::Close()
that seems intended to catch this, but it looks only at mAudioContextState
which is set async.
Its of old origin, and not looking at mCloseCalled
seems like an oversight, as the guard and mCloseCalled
were implemented in the same patch, and Suspend() and Resume() have similar guards though these do account for mCloseCalled
. The guard in Close() didn't, already then.
I'll see whether adding a check for mCloseCalled
to the Close() guard is sufficient.
Assignee | ||
Comment 3•4 years ago
|
||
Assignee | ||
Comment 4•4 years ago
|
||
Assignee | ||
Comment 5•4 years ago
|
||
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Comment 7•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/0f8c3d54dea3
https://hg.mozilla.org/mozilla-central/rev/76c777a96473
Updated•4 years ago
|
Description
•