Bug 1489160 - Check mCloseCalled instead of mAudioContextState when checking for a closed AudioContext. r=karlt

Differential Revision: https://phabricator.services.mozilla.com/D98316